fix: prevent map viewer from overlapping plone sidemenu

--- a/theme/clms/css/styles.less
+++ b/theme/clms/css/styles.less
@@ -1281,3 +1281,8 @@ div#page-document h1.documentFirstHeading {
 main {
   overflow: visible !important;
 }
+
+//CLMS-1587
+.toolbar-content {
+  z-index: 9 !important;
+}
